web/src/Board.css
body {
    background-color: #EBF4FE;
    font-family: "Sylfaen", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 12pt;
    margin: 0px;
}

h1 {
    color: #b32407;
    font-family: "MS Pゴシック", "MS PGothic", "Mona", "Hiragino Kaku Gothic Pro", Helvetica, sans-serif;
    font-size: 28px;
    text-shadow: #8e3523 1px 1px 0px;
    letter-spacing: 1px;
    text-align: center;
}

h2 {
    text-align: center;
    font-size: 16px;
    letter-spacing: 1px;
    margin-top: 0px;
    margin-bottom: 5px;
    padding-bottom: 20px;
}

.clickable {
    font-size: 18px;
    letter-spacing: 1px;
    margin-top: 0px;
    margin-bottom: 5px;
    text-align: center;
}

.menu {
    font-size: 18px;
    margin-top: 0px;
    margin-bottom: 5px;
    text-align: center;
}

.grid-container {
    margin: 0 auto;
    width: 99vw;
    display: grid;
    grid-template-columns: repeat(10, 1.5fr);
    grid-template-rows: repeat(10, 1.5fr);
    gap: 0px 0px;
}

.openingPost {
    max-height: 335px;

    height: auto;
    overflow: hidden;
}

.catalogImage {
    vertical-align: top;
    display: inline-block;
    text-align: center;
}
.catalogImage img {
    max-width: 100%;
    height: auto;
}

.catalogComment {
    display: block;
}

.boardLink {
    padding-left: 4px;
    padding-right: 4px;
}

.timer {
    float: left;
}

.worldTime {
    float: right;
    padding-bottom: 10px;
}

del, del em {
    background-color: black;
    color: black;
    text-decoration: none;
}

del:hover, del:hover em, del.reveal, del.reveal em {
    color: white;
}

hr {
    clear: both;
    border: none;
    height: 0;
    border-top: #253371 1px solid;
}

span.postName {
    font-weight: bold;
}

#menu ul{
    list-style: none;
}
#menu li{
    display: inline;
}

div.outer {
    background-color: #EBF4FE;
    position: absolute;
    margin-left: 1%;
    margin-right: 1%;
    width: 80%;
    min-height: 100%;
    height: auto !important;
}

div.post {
    background-color: #CAD0E7;
    border-right: 1px solid #b9d9b7;
    border-bottom: 1px solid #b9d9b7;
    padding-top: 7px;
    padding-bottom: 7px;
    padding-left: 10px;
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 5px;
    min-width: 40%;
    display: table;
}

.hover .post {
    width: max-content;
}

.postHeader {
    display: table;
}

div.thread {
    padding-top: 7px;
    padding-bottom: 7px;
    padding-left: 10px;
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 5px;
    min-height: 50px;
    clear: both;
}

.threadHeader {
    display: block;
}

.quotedBy {
    padding-left: 4px;
}

.content {
    padding: 7px;
    display: block;
}

.noQuote {
    color: darkblue;
}

.quote {
    color: darkgreen;
}

.image {
    padding: 10px;
    min-height: 150px;
    min-width: 150px;
    float: left;
}
.image img {
    max-height: 500px;
    max-width: 500px;
}

div.reply {
    margin-left: 30%;
    margin-right: 30%;
    width: 40%;
}

form .field {
    padding: 5px;
    display: block;
}

ol {
    margin: 0px;
}

.way img {
    margin-top: 4px;
    margin-left: 8px;
}

div.spoilimg {
    position: relative;
    width: 100%;
}

span.spoiltxt {
    position: absolute;
    top: 35px;
    left: 35px;
    width: 100%;
}

div.aska {
    margin-top: 10px;
    margin-left: 10px;
    margin-bottom: 10px;
}

